# minotari_payment_processor

./: .env  .env.sample  .gitignore  Cargo.toml  Makefile  README.md
docs/architecture/: payment-batch-lifecycle.md  state-descriptions.md  system-overview.md
docs/db/: db_schema.sql
migrations/: 20251017081013_init.sql  20251201115213_add_intermediate_context.sql  20251209145502_add_payref_to_payments.sql  20260102132241_add_index_to_payref.sql
minotari-client/: Cargo.toml
minotari-client/src/: lib.rs
minotari-client/src/apis/: accounts_api.rs  configuration.rs  mod.rs
minotari-client/src/models/: account_balance.rs  api_error.rs  api_error_one_of.rs  api_error_one_of_1.rs  api_error_one_of_2.rs  api_error_one_of_3.rs  api_error_one_of_4.rs  create_transaction_request.rs  lock_funds_request.rs  lock_funds_response.rs  lock_funds_result.rs  mod.rs  recipient_request.rs  wallet_params.rs
minotari_payment_processor/: Cargo.toml
minotari_payment_processor/resources/: default_log4rs.yml
minotari_payment_processor/src/: config.rs  lib.rs  main.rs
minotari_payment_processor/src/api/: error.rs  mod.rs  payments.rs  version.rs
minotari_payment_processor/src/db/: mod.rs  payment.rs  payment_batch.rs
minotari_payment_processor/src/utils/: log.rs
minotari_payment_processor/src/workers/: batch_creator.rs  broadcaster.rs  confirmation_checker.rs  mod.rs  transaction_signer.rs  types.rs  unsigned_tx_creator.rs
scripts/: regenerate_client.sh
