[package]
name = "minotari-client"
version = "0.1.0"
license = ""
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = { workspace = true }
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
