[package]
name = "minotari_payment_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.6", features = ["default", "http2", "macros"] }
chrono = "0.4.42"
config = "0.15.19"
tokio = { version = "1.47.1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = [
    "migrate",
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
] }
thiserror = "2.0.17"
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
minotari-client = { path = "../minotari-client" }
uuid = { version = "1", features = ["v4"] }
tempfile = "3.23.0"

minotari_node_wallet_client  = { git = "https://github.com/tari-project/tari/", rev = "ed473c3c94c2219ac1eebb9345384b6a7245606c" }
tari_common = { git = "https://github.com/tari-project/tari/", rev = "ed473c3c94c2219ac1eebb9345384b6a7245606c" }
tari_common_types = { git = "https://github.com/tari-project/tari/", rev = "ed473c3c94c2219ac1eebb9345384b6a7245606c" }
tari_crypto = { version = "0.22.1", features = ["borsh"] }
tari_transaction_components  = { git = "https://github.com/tari-project/tari/", rev = "ed473c3c94c2219ac1eebb9345384b6a7245606c" }
tari_utilities = { version = "0.8" }
hex = "0.4.3"
dotenv = "0.15.0"
url = "2.5.7"
