[package]
name = "minotari_payment_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.6", features = ["default", "http2", "macros"] }
chrono = "0.4.42"
config = "0.15.19"
dotenv = "0.15.0"
hex = "0.4.3"
log = { version = "0.4.29", features = ["kv"] }
log4rs = { version = "1.4.0", features = ["yaml_format", "console_appender", "file_appender", "log_kv"] }
minotari-client = { path = "../minotari-client" }

minotari_node_wallet_client  = { git = "https://github.com/tari-project/tari/", rev = "9406e482007ac8b8c63db8b76fd8fd92d244ca09" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = [
    "migrate",
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
] }
tari_common = { git = "https://github.com/tari-project/tari/", rev = "9406e482007ac8b8c63db8b76fd8fd92d244ca09" }
tari_common_types = { git = "https://github.com/tari-project/tari/", rev = "9406e482007ac8b8c63db8b76fd8fd92d244ca09" }
tari_crypto = { version = "0.22.1", features = ["borsh"] }
tari_script  = { git = "https://github.com/tari-project/tari/", rev = "9406e482007ac8b8c63db8b76fd8fd92d244ca09" }
tari_transaction_components  = { git = "https://github.com/tari-project/tari/", rev = "9406e482007ac8b8c63db8b76fd8fd92d244ca09" }
tari_utilities = { version = "0.8" }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
